c: hash_table: Add verbose target to Makefile
 - To print out informative messages to stderr in tests

--- a/c/hash_table/Makefile
+++ b/c/hash_table/Makefile
@@ -4,6 +4,9 @@
 hash_table_test: hash_table.o hash_table_test.o
 	gcc $^ -o $@
 
+verbose: hash_table.o hash_table_test.c
+	gcc -DVERBOSE $^ -o hash_table_test
+
 all: hash_table_test
 
 clean:
